@@ -147,6 +147,10 @@ frame = dicomread( [ dirdata filesep file( 1 ).name ] );
 % remove alpha channel or other layers if present
 frame = frame( :, :, 1 );
 
+% rotate frame so that it fulfills Matlab's convention that the
+% X-coordinates are along columns
+frame = permute(frame, [2, 1]);
+
 % init volume to load data
 im = zeros( [ size( frame )*scale length( file ) ], class( frame ) );
 
@@ -155,6 +159,7 @@ im( :, :, 1 ) = imresize( frame, scale, 'bilinear' );
 for I = 2:length( file )
     frame = dicomread( [ dirdata filesep file( I ).name ] );
     frame = frame( :, :, 1 );
+    frame = permute(frame, [2, 1]);
     % resize frames
     im( :, :, I ) = imresize( frame, scale, 'bilinear' );
 end
