@@ -1,3 +1,10 @@
+2010-06-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* FileFormatToolbox/dcm2metaimage.m
+
+	- Fix bug. DICOM frames need to be rotated 90º because Matlab's
+	convention is that X-coordinates go along columns.
+
 2010-06-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
 	* CardiacToolbox/scinrrd_rv_crescent_tips.m
